# traccia

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  auto.py  auto_instrumentation.py  cli.py  config.py  errors.py  pricing_config.py  pyproject.toml  runtime_config.py
.github/workflows/: publish.yml
context/: __init__.py  context.py  propagators.py
exporter/: __init__.py  console_exporter.py  file_exporter.py  http_exporter.py  otlp_exporter.py
instrumentation/: __init__.py  anthropic.py  decorator.py  fastapi.py  http_client.py  http_server.py  openai.py  requests.py
processors/: __init__.py  agent_enricher.py  batch_processor.py  cost_engine.py  cost_processor.py  drop_policy.py  logging_processor.py  rate_limiter.py  sampler.py  token_counter.py
tests/: __init__.py  test_auto_start.py  test_backward_compat.py  test_basic_e2e.py  test_comprehensive_e2e.py  test_config_file.py  test_core_functionality.py
tracer/: __init__.py  otel_adapter.py  otel_utils.py  provider.py  span.py  span_context.py  tracer.py
utils/: __init__.py  helpers.py
